@@ -1,3 +1,9 @@
+2007-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* inf-haskell.el (inferior-haskell-string-to-strings):
+	Remove `separator' argument.  Call split string without separator arg
+	either, so that it drops null strings.
+
 2007-05-03  "David House"  <dmhouse@gmail.com>  (tiny change)
 
 	* inf-haskell.el (inferior-haskell-load-file): Save buffer before
